remoção do sun.misc.BASE64Encoder